--- a/WebAppfor_AW_worker/WebAppfor_AW_worker.csproj
+++ b/WebAppfor_AW_worker/WebAppfor_AW_worker.csproj
@@ -36,6 +36,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\User\Controllers\" />
+    <Folder Include="Areas\User\Models\" />
+    <Folder Include="Areas\User\Views\" />
+    <Folder Include="Areas\Worker\Controllers\" />
+    <Folder Include="Areas\Worker\Models\" />
+    <Folder Include="Areas\Worker\Views\" />
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
