--- a/WebAppfor_AW_worker/appsettings.json
+++ b/WebAppfor_AW_worker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebAppfor_AW_workerContext": "Server=(localdb)\\mssqllocaldb;Database=WebAppfor_AW_worker.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebAppfor_AW_workerContext": "Server=MARIA\\MSSQLSERVER01;Database=AW_worker.Data;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true;Encrypt=false"
   }
 }
