--- a/WebAppfor_AW_worker/WebAppfor_AW_worker.csproj
+++ b/WebAppfor_AW_worker/WebAppfor_AW_worker.csproj
@@ -7,13 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Areas\User\**" />
     <Compile Remove="Views\Login\**" />
-    <Content Remove="Areas\User\**" />
     <Content Remove="Views\Login\**" />
-    <EmbeddedResource Remove="Areas\User\**" />
     <EmbeddedResource Remove="Views\Login\**" />
-    <None Remove="Areas\User\**" />
 
     <None Remove="Views\Login\**" />
   </ItemGroup>
@@ -31,13 +27,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Areas\User\Controllers\UserController.cs" />
-    <Compile Include="Areas\User\Models\RegionTbl1.cs" />
-    <Compile Include="Areas\User\Models\RequestTbl1.cs" />
-    <Compile Include="Areas\User\Models\UserTbl1.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
@@ -49,7 +38,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\User\Controllers\" />
+    <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\Worker\Controllers\" />
     <Folder Include="Areas\Worker\Models\" />
     <Folder Include="Areas\Worker\Views\" />
@@ -59,8 +48,8 @@
 
   <ItemGroup>
     <None Include="Areas\User\Views\finish_req.cshtml" />
-    <None Include="Areas\User\Views\User\Index.cshtml" />
     <None Include="Areas\User\Views\User\srv_req.cshtml" />
+    <None Include="Areas\User\Views\User\Update.cshtml" />
   </ItemGroup>
 
 </Project>
